--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/FOTO-NUEVA.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/scooter2.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -143,7 +143,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="img/portfolio/grid/load-11.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/hoverboard.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -159,7 +159,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="img/portfolio/grid/load-12.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/accesorios.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -175,7 +175,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/FOTO-ACCESORIOS.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/FOTO-ACCESORIOS2.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
