--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <!-- Header Left -->
                             <div class="header-left">
                                 <div class="logo">
-                                    <a href="index.html">
+                                    <a href="https://www.fravega.com/">
                                         <img src="imgss/logo'fravega.png" alt="Logo Voyer" style="width: 80%;">
                                     </a>
                                 </div>
@@ -104,7 +104,7 @@
                             data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                             data-param10="" data-description="">
                             <!-- MAIN IMAGE -->
-                            <img  src="imgss/IMAGEN-SUBITE.jpg"  alt="" data-bgposition="center center"
+                            <img  src="imgss/SUBITE1.jpg"  alt="" data-bgposition="center center"
                                 data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina >
                             <!-- LAYERS -->
                             <div class="container-fluid plr--180 plr_lg--100 plr_md--50 plr_sm--50" >
@@ -158,7 +158,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/scooter2.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/480X325.1.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -173,7 +173,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/hoverboard.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/480X325.2.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -189,7 +189,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/accesorios.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/480X325.4.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -205,7 +205,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/FOTO-ACCESORIOS2.jpg" alt="Portfolio Images"></a>
+                                    <a href="portfolio-details.html"><img src="imgss/480X325.3.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -306,7 +306,7 @@
                         </div>
                         <div class="col-lg-5 col-md-12 col-12 mt_md--40 mt_sm--40">
                             <div class="thumb">
-                                <img class="w-100" src="imgss/ATRIBUTOS-04.jpg" alt="multipurpose">
+                                <img class="w-100" src="imgss/745x680.2.jpg" alt="multipurpose">
                             </div>
                         </div>
                     </div>
@@ -470,7 +470,7 @@
                         </div>
                         <div class="col-lg-5 col-md-12 col-12 mt_md--40 mt_sm--40">
                             <div class="thumb">
-                                <img class="w-100" src="imgss/ATRIBUTOS-02.jpg" alt="multipurpose">
+                                <img class="w-100" src="imgss/745x680.4.jpg" alt="multipurpose">
                             </div>
                         </div>
                     </div>
@@ -483,14 +483,14 @@
                 <div class="row row--0 align-items-center">
                     <div class="col-lg-12 col-xl-6">
                         <div class="bext-service thumb">
-                            <img src="imgss/FOTO-ACCESORIOS.jpg" alt="images">
+                            <img src="imgss/745x680.1.jpg" alt="images">
                         </div>
                     </div>
                     <div class="col-lg-12 col-xl-6">
                         <div class="bext-service plr--190 plr_lg--50 plr_lp--40 plr_md--50 plr_sm--30 mt_lg--40 mb_lg--40 mt_md--40 mb_md--40 mt_sm--40 mb_sm--40">
                             <div class="content">
                                 <div class="brook-section-title text-left">
-                                    <h3 class="heading heading-h3 font-large">Conoce el mapa de ciclovias</h3>
+                                    <h3 class="heading heading-h3 font-large">Conocé el mapa de ciclovias</h3>
                                     <!-- <div class="bkseparator--25"></div>
                                     <div class="title-separator w--80 color-red"></div> -->
                                 </div>
@@ -592,7 +592,7 @@
                         </div>
                         <div class="col-lg-5 col-md-12 col-12 mt_md--40 mt_sm--40">
                             <div class="thumb">
-                                <img class="w-100" src="imgss/ATRIBUTOS-03.jpg" alt="multipurpose">
+                                <img class="w-100" src="imgss/745x680.3.jpg" alt="multipurpose">
                             </div>
                         </div>
                     </div>
