--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <div class="brook-service-area bg_color--1 pb--40">
                 <div class="row row--0 align-items-center">
                     <div class="col-lg-12 col-xl-6">
-                        <div class="bext-service thumb">
+                        <div class="bext-service thumb pl--15 plr_sm--15">
                             <img src="imgss/745x680.1.jpg" alt="images">
                         </div>
                     </div>
