--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/480X325.1.jpg" alt="Portfolio Images"></a>
+                                    <a href="https://www.fravega.com/l/?promociones=monopatines" target="blank"><img src="imgss/480X325.1.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -141,7 +141,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/480X325.2.jpg" alt="Portfolio Images"></a>
+                                    <a href="http://www.fravega.com/l/?promociones=hovers-rollers" target="blank"><img src="imgss/480X325.2.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -157,7 +157,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/480X325.4.jpg" alt="Portfolio Images"></a>
+                                    <a href="http://www.fravega.com/l/?promociones=bicis-ebikes" target="blank"><img src="imgss/480X325.4.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -173,7 +173,7 @@
                         <div class="col-lg-6 col-sm-6 col-12 move-up wow">
                             <div class="portfolio-cation mt--30">
                                 <div class="thumb">
-                                    <a href="portfolio-details.html"><img src="imgss/480X325.3.jpg" alt="Portfolio Images"></a>
+                                    <a href="http://www.fravega.com/l/?promociones=accesorios" target="blank"><img src="imgss/480X325.3.jpg" alt="Portfolio Images"></a>
                                 </div>
                                 <div class="port-overlay-info">
                                     <div class="hover-action" style="background-color: #BA1E92; text-align: center;">
@@ -567,7 +567,6 @@
                 </div>
             </div>
             <!-- End Icon Boxes -->
-
         </main>
         <!--// Page Conttent -->
     </div>
@@ -589,7 +588,7 @@
             </div>
             <div class="col-lg-6 col-sm-6 col-12">
                 <div class="text-center text-sm-right mt_mobile--20 wow move-up">
-                    <div class="center"><a href="https://www.fravega.com"> <img src="imgss/logo'fravega.png" alt="" " style="width: 48%;"></a></div>
+                    <div class="center"><a href="https://www.fravega.com" target="blank"> <img src="imgss/logo'fravega.png" alt="" " style="width: 48%;"></a></div>
                 </div>
             </div>
         </div>
